--- a/static/stat572/hw_stat572.html
+++ b/static/stat572/hw_stat572.html
@@ -370,19 +370,19 @@ summary {
 <p>STAT 572</p>
 <div id="hw1" class="section level2">
 <h2>HW1</h2>
-<div id="section-1" class="section level3">
-<h3>1</h3>
+<div id="a-exponential-case" class="section level3">
+<h3>1 A Exponential Case</h3>
 <p>We write <span class="math inline">\(Y\sim Exp(\theta)\)</span> to indicate that Y has the Exponential distribution, that is, its p.d.f. is</p>
-<p><span class="math inline">\(p(y|θ) = Exp(y|θ) = θe−θy1{y&gt;0}\)</span></p>
+<p><span class="math inline">\(p(y|θ) = Exp(y|θ) = θe−θy1_{\{y&gt;0\}}\)</span></p>
 <p>The Exponential distribution has some special properties that make it a good model for certain applications. It has been used to model the time between events (such as neuron spikes, website hits, neutrinos captured in a detector), extreme values such as maximum daily rainfall over a period of one year, or the amount of time until a product fails (lightbulbs are a standard example). Suppose you have data <span class="math inline">\(y_1,...,y_n\)</span> which you are modeling as iid observations from an Exponential distribution, and suppose that your prior is <span class="math inline">\(\theta\sim Gamma(a,b)\)</span>, deﬁned as in the previous question.</p>
-<p>(a). Derive the formula for the posterior density, p(θ|y1:n). Give the form of the posterior in terms of one of the following distributions: Bernoulli, Beta, Exponential, and Gamma</p>
+<p>(a). Derive the formula for the posterior density, <span class="math inline">\(p(\theta|y_{1:n})\)</span>. Give the form of the posterior in terms of one of the following distributions: Bernoulli, Beta, Exponential, and Gamma</p>
 <p>(b). Now, suppose you are measuring the number of seconds between lightning strikes during a storm, your prior is Gamma(0.1,1.0), and your data is</p>
 <p><span class="math inline">\((y_1,...,y_8) = (20.9,69.7,3.6,21.8,21.4,0.4,6.7,10.0)\)</span></p>
 <p>Plot the prior and posterior pdf’s. (Be sure to make your plots on a scale that allows you to clearly see the important features.)</p>
 <p>(c). Give a speciﬁc example of an application where an Exponential model would be reasonable. Give an example where an Exponential model would NOT be appropriate, and explain why.</p>
 </div>
-<div id="section-2" class="section level3">
-<h3>2</h3>
+<div id="a-poisson-case" class="section level3">
+<h3>2 A Poisson Case</h3>
 <p>An ecologist records the number of eggs laid in a sample of sparrow nests of size <span class="math inline">\(n=20\)</span>. Let <span class="math inline">\(Y_i\)</span> be the number of eggs laid in nest i for <span class="math inline">\(i=1,...,20\)</span>. Based on this sample, the ecologist is interested in estimating <span class="math inline">\(\theta\)</span>, the mean number of eggs per nest in the general population of nests. Assume <span class="math inline">\(Y_1,...,Y_n|\theta\sim Poisson(\theta)\)</span> iid, and also for now that <span class="math inline">\(\theta\in\Theta=\{0.1,0.2,...,4.9,5.0\}\)</span> and that <span class="math inline">\(p(\theta) = 1/50\)</span> for each <span class="math inline">\(\theta\in\Theta\)</span>.</p>
 <p>(a). Let <span class="math inline">\(X=\sum_i Y_i\)</span> denote the random variable that counts the total number of eggs laid in the 20 nests. Using the form of Bayes rule on page 15 of the Hoﬀ book, write down a formula for <span class="math inline">\(p(\theta|x)\)</span> and simplify as much as possible.</p>
 <p>(b). The ecologist observes that <span class="math inline">\(x = 36\)</span>. Make a plot of <span class="math inline">\(p(\theta|x)\)</span> versus <span class="math inline">\(\theta\)</span> for<span class="math inline">\(\theta\in\Theta\)</span></p>
@@ -390,20 +390,20 @@ summary {
 <p>(d). Find two numbers, <span class="math inline">\(\theta_l\)</span> and <span class="math inline">\(\theta_h\)</span> such that <span class="math inline">\(Pr(\theta_l\le\theta\le\theta_h|x)\approx 0.95\)</span>. This is an approximate 95% posterior conﬁdence interval. Note that there is more than one way of doing this.</p>
 <p>(e). Remake the plot in part (b) but with <span class="math inline">\(n = 40\)</span> and <span class="math inline">\(x = 72\)</span>. Describe and explain the diﬀerences you see between this plot and the one in (b).</p>
 </div>
-<div id="section-3" class="section level3">
-<h3>3</h3>
-<p>Suppose the data y1:n|θ is modeled as iid Exp(θ), and the prior is</p>
+<div id="posterior-predictive-density" class="section level3">
+<h3>3 posterior predictive density</h3>
+<p>Suppose the data <span class="math inline">\(y_{1:n}|\theta\)</span> is modeled as iid <span class="math inline">\(Exp(\theta)\)</span>, and the prior is</p>
 <p><span class="math inline">\(p(\theta) = Gamma(\theta|a,b) = b^a \Gamma(a) \theta^{a−1}e^{−b\theta}1_{\{θ&gt;0\}}\)</span></p>
-<p>From problem 1, we know that the posterior is p(θ|y1:n) = Gamma(θ|an,bn), where an = a+n and bn = b+Pn i=1 yi. What is the posterior predictive density p(yn+1|y1:n)? Give your answer as a closed-form expression (not an integral).</p>
+<p>From problem 1, we know that the posterior is <span class="math inline">\(p(\theta|y_{1:n}) = Gamma(\theta|a_n,b_n)\)</span>, where <span class="math inline">\(a_n=a+n\)</span> and <span class="math inline">\(b_n=b+\sum^n_{i=1} y_i\)</span>. What is the posterior predictive density <span class="math inline">\(p(y_{n+1}|y_{1:n})\)</span>? Give your answer as a closed-form expression (not an integral).</p>
 </div>
 <div id="decision-theory" class="section level3">
 <h3>4 (decision theory)</h3>
-<p>Suppose that in the small imaginary city of our class example, where the prevalence of a rare disease was studied (Foundations: Section 4, page 11), public health oﬃcials need to decide the amount of resources to allocate towards prevention and treatment of the disease we are concerned with, with the fraction of infected individuals <span class="math inline">\(\theta\)</span> still unknown. They will decide on the resources needed based on a fraction c of the population. If c is chosen too large, there will be wasted resources, while if it is too small, preventable cases may occur and some individuals may go untreated. After some deliberation, they tentatively adopt the following loss function:</p>
+<p>Suppose that in the small imaginary city of our class example, where the prevalence of a rare disease was studied (Foundations: Section 4, page 11), public health oﬃcials need to decide the amount of resources to allocate towards prevention and treatment of the disease we are concerned with, with the fraction of infected individuals <span class="math inline">\(\theta\)</span> still unknown. They will decide on the resources needed based on a fraction <span class="math inline">\(c\)</span> of the population. If <span class="math inline">\(c\)</span> is chosen too large, there will be wasted resources, while if it is too small, preventable cases may occur and some individuals may go untreated. After some deliberation, they tentatively adopt the following loss function:</p>
 <p><span class="math inline">\(l(\theta,c)=(\theta−c + 0.5)^2\)</span> for <span class="math inline">\(c\in[0,1]\)</span></p>
 <p>(a). Assume that the number of people sampled is again <span class="math inline">\(n=20\)</span>, that <span class="math inline">\(y=0\)</span>, and use <span class="math inline">\(\theta\sim Beta(2,20)\)</span> as the prior again to derive the posterior expected loss.</p>
 <p>(b). Find an optimal value (call it <span class="math inline">\(\hat c\)</span>) for <span class="math inline">\(c\)</span> following a Bayesian decision procedure using the set up from part (a).</p>
 <p>(c). Graphically compare <span class="math inline">\(l(\theta,\hat c)\)</span> and <span class="math inline">\(l(\theta,\bar y)\)</span> as <span class="math inline">\(\theta\)</span> ranges from 0 to 1.</p>
-<p>(d). Compare the outcome from the Bayesian decision procedure to the procedures that choose (i) <span class="math inline">\(c=\bar y\)</span> and (ii) <span class="math inline">\(c=0.1\)</span> constant (i.e., setting it to the prior mean). This comparison can be done by observing the optimal quantity <span class="math inline">\(c\)</span> derived from each of the decision procedures considered while varying the value of y (the number of infected cases).</p>
+<p>(d). Compare the outcome from the Bayesian decision procedure to the procedures that choose (i) <span class="math inline">\(c=\bar y\)</span> and (ii) <span class="math inline">\(c=0.1\)</span> constant (i.e., setting it to the prior mean). This comparison can be done by observing the optimal quantity <span class="math inline">\(c\)</span> derived from each of the decision procedures considered while varying the value of <span class="math inline">\(y\)</span> (the number of infected cases).</p>
 </div>
 </div>
 </div>
