--- a/static/stat501/note_stat501.html
+++ b/static/stat501/note_stat501.html
@@ -498,6 +498,20 @@ Z_i|\boldsymbol{\beta,\gamma},y_i&amp;\sim N(\mathbf{x}_i^T\boldsymbol{\beta},1)
 </div>
 <div id="unordered-categories-with-a-latent-multinormal-distribution" class="section level4">
 <h4>4.2 Unordered Categories With a Latent Multinormal Distribution</h4>
+<p>We introduce independent latent variables <span class="math inline">\(Z_i=(Z_{i1},..,Z_{iJ})(J&gt;2)\)</span> and define <span class="math inline">\(Z_{ij}=\mathbf{x}_{ij}^T\boldsymbol{\beta}+\varepsilon_{ij},\ i=1,..,N;j=1,..,J\)</span>, whrre <span class="math inline">\(\varepsilon_i=(\varepsilon_{i1},..,\varepsilon_{iJ})^T\sim N_J(\mathbf{0,\Sigma_{J\times J}})\)</span></p>
+<p><span class="math inline">\(\mathbf{\Sigma}\)</span> is parameterized in terms of a parameter vector <span class="math inline">\(\theta\)</span> of dimension not exceeding <span class="math inline">\(\frac12J(J-1)\)</span>.</p>
+<p>On unit <span class="math inline">\(i\)</span> we observe one of <span class="math inline">\(J\)</span> possible outcomes with respective probabilities <span class="math inline">\(p_{i1},..,p_{ij}\)</span>. Category <span class="math inline">\(j\)</span> is observed if <span class="math inline">\(Z_{ij}&gt;Z_{ik}\)</span> for all <span class="math inline">\(k\neq j\)</span>.</p>
+<p>The multinomial logit model can be derived in this setup if and only if the errors <span class="math inline">\(\varepsilon_{ij}\)</span> are a random sample from a Type I extreme value distribution. The multinomial probabilities are given by <span class="math inline">\(p_{ij}=P[\mathbf{x}_{ij}^T\boldsymbol{\beta}+\varepsilon_{ij}&gt;\mathbf{x}_{ik}^T\boldsymbol{\beta}+\varepsilon_{ik}, \forall k\neq j]\)</span></p>
+<p><span class="math inline">\(\mathbf{Z=X}\boldsymbol{\beta+\varepsilon}\)</span> where <span class="math inline">\(\varepsilon=(\varepsilon_{1}^T,..,\varepsilon_{N}^T)^T\sim N_{NJ}(\mathbf{0,I_N\otimes\Sigma})\)</span></p>
+<p><span class="math display">\[
+\begin{align} 
+\boldsymbol{\beta|Z_{1:N},Y,\theta}&amp;\sim N_k(\boldsymbol{\hat\beta_{Z}},(\mathbf{X&#39;\Omega^{-1} X})^{-1}); \quad\boldsymbol{\hat\beta_{Z}}=(\mathbf{X&#39;\Omega^{-1} X})^{-1}\mathbf{X&#39;\Omega^{-1} Z}\\
+\boldsymbol{Z_i|y,\beta,\theta,\{Z_i\}}&amp;\sim N(\mathbf{x}_i^T\boldsymbol{\beta},\Sigma) \quad\text{such that
+ the }y_i^{th}\text{ component of }Z_i\text{ is the maximum}  &amp;&amp;\\
+\boldsymbol{\theta|Z_{1:N},Y,\beta}&amp;\propto \boldsymbol{\pi(\theta)|\Omega|^{-\frac12}} \exp\left[-\frac12\boldsymbol{(Z-X\beta)^T\Omega^{-1}(Z-X\beta)}\right]&amp;&amp;(14)\\
+\end{align}
+\]</span></p>
+<p><span class="math inline">\(\mathbf{\Omega}^{-1}\)</span> is a block diagonal matrix with <span class="math inline">\(\mathbf{\Sigma}^{-1}\)</span> as the typical block. <span style="color: red;"> ???</span></p>
 </div>
 </div>
 <div id="finney-data" class="section level3">
