--- a/static/stat501/note_stat501.html
+++ b/static/stat501/note_stat501.html
@@ -363,7 +363,7 @@ summary {
 
 <h1 class="title toc-ignore">Statistical Literature and Problems</h1>
 <h3 class="subtitle">STAT 501</h3>
-<h4 class="date">02 July, 2020</h4>
+<h4 class="date">03 July, 2020</h4>
 
 </div>
 
@@ -907,7 +907,33 @@ comp
 </div>
 <div id="polson-etal-2013" class="section level2">
 <h2>(Polson etal, 2013)</h2>
-<p>Nicholas G. Polson, James G. Scott &amp; Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, DOI: 10.1080/01621459.2013.829001</p>
+<p>Nicholas G. Polson, James G. Scott &amp; Jesse Windle (2013) Bayesian Inference for Logistic Models Using Pólya–Gamma Latent Variables, Journal of the American Statistical Association, 108:504, 1339-1349, <a href="https://www-tandfonline-com/doi/full/10.1080/01621459.2013.829001">DOI: 10.1080/01621459.2013.829001</a></p>
+<div id="introduction-2" class="section level3">
+<h3>Introduction</h3>
+<p><a href="https://jgscott.github.io/">Home page of James Scott</a></p>
+<p><a href="https://github.com/jwindle/BayesLogit">R package BayesLogit and Thesis</a></p>
+<p><em>Definition 1</em>. A random variable X has a Pólya–Gamma distribution with parameters b &gt; 0 and , denoted as <span class="math inline">\(X\sim PG(b, c),\)</span> if</p>
+<p>where the <span class="math inline">\(g_k ∼ Ga(b, 1)\)</span> are independent gamma random variables, and where indicates equality in distribution.</p>
+</div>
+<div id="the-polya-gamma-distribution" class="section level3">
+<h3>2 The Polya-Gamma distribution</h3>
+</div>
+<div id="a-data-augmentation-strategy" class="section level3">
+<h3>3 A data-augmentation strategy</h3>
+<p>A data-augmentation scheme for binomial likelihoods</p>
+</div>
+<div id="simulating-polya-gamma-random-variables" class="section level3">
+<h3>4 Simulating Polya-Gamma random Variables</h3>
+<p>a method for simulating from the Pólya–Gamma distribution, which we have implemented as a stand-alone sampler in the BayesLogit R package.</p>
+</div>
+<div id="experiment" class="section level3">
+<h3>5 Experiment</h3>
+<p>presents the results of an extensive benchmarking study comparing the efficiency of our method to other data-augmentation schemes.</p>
+</div>
+<div id="discussion" class="section level3">
+<h3>6 Discussion</h3>
+<p>concludes with a discussion of some open issues related to our proposal.</p>
+</div>
 </div>
 </div>
 
